--- a/content/pages/Material UI 3 kit.mdx
+++ b/content/pages/Material UI 3 kit.mdx
@@ -1,1 +1,8 @@
+---
+blocks:
+  - background: bg-gray-50/80
+    title: Built to cover your needs
+    description: We have a lot of features to cover your needs
+    _template: features
+---
 
