TinaCMS content update
Co-authored-by: CNM <ngmcuongcc@gmail.com>

--- a/content/pages/Material UI 3 kit.mdx
+++ b/content/pages/Material UI 3 kit.mdx
@@ -3,6 +3,14 @@ blocks:
   - background: bg-gray-50/80
     title: Built to cover your needs
     description: We have a lot of features to cover your needs
+    items:
+      - icon:
+          name: Tina
+          color: white
+          style: float
+        title: Here's Another Feature
+        text: |
+          sdfsdfsdf
     _template: features
 ---
 
