TinaCMS content update
Co-authored-by: CNM <ngmcuongcc@gmail.com>

--- a/content/pages/Material UI 3 kit.mdx
+++ b/content/pages/Material UI 3 kit.mdx
@@ -12,5 +12,17 @@ blocks:
         text: |
           sdfsdfsdf
     _template: features
+  - title: Start Building
+    description: >-
+      Get started with TinaCMS today and take your content management to the
+      next level.
+    actions:
+      - label: Get Started
+        type: button
+        link: /
+      - label: Book Demo
+        type: link
+        link: /
+    _template: cta
 ---
 
